--- a/Styless.css
+++ b/Styless.css
@@ -229,27 +229,36 @@ body {
   }
 
 /* Modal content styling */
-.modal {
+/* .modal {
     display: none; 
     position: fixed;
-    z-index: 110;
-    left: 50%;
-    top: 50%;
+    z-index: 1000000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.); 
+    justify-content: center;
     overflow-y: auto;
     height: auto;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
-    margin-top: 160px;
-}
+    
+} */
 
 /* Modal content box */
 .modal-content {
-    /* background-color: #fff; */
-    margin: 5% auto;
-    padding: 25px;
-    border: 1px solid #888;
-    max-width: 800px;
+    background-color: white;
+    margin: 10% auto;
+    padding: 20px;
+    max-width: 50%;
+    max-height: 75%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    z-index: 10000;
+    width: 90%;
+    
+    
 }
 
 /* Close button */
@@ -436,7 +445,7 @@ body {
     position: relative;
     display: inline-block;
     background: #14744F;
-    color: #FFF;
+    color: #fff;
     font-weight: 400;
     height: 45px;
     line-height: 45px;
@@ -446,10 +455,13 @@ body {
     opacity: 0.9;
     -webkit-transition: 0.6s all;
     transition: 0.6s all;
-    margin-right: 10px;
-  }
+    
+
+}
+
+
   
-  .top-button:after {
+.top-button:after {
     content: "";
     position: absolute;
     top: 0;
@@ -471,6 +483,48 @@ body {
   .top-button:hover, .top-button:focus {
     color: #FFF;
     opacity: 1;
+  }
+
+  
+
+
+
+.top-button .donate-button:hover {
+    transform: translateY(-3px);
+    /* box-shadow: 0 5px 15px rgba(0, 104, 55, 0.3); */
+    outline: none;
+}
+
+
+
+  .top-button .donate-button:focus {
+    outline: none;
+  }
+
+  .top-button .donate-button:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -50%;
+    width: 120%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.5);
+    -webkit-transform: scale3d(6, 2, 1) rotate(135deg) translate(0, -150%);
+    transform: scale3d(6, 2, 1) rotate(135deg) translate(0, -150%);
+    -webkit-transition: 0.6s all;
+    transition: 0.6s all;
+  }
+  
+  .top-button:hover:after {
+    -webkit-transform: scale3d(6, 2, 1) rotate(135deg) translate(0, 100%);
+    transform: scale3d(6, 2, 1) rotate(135deg) translate(0, 100%);
+    outline: none;
+  }
+  
+  .top-button .donate-button:hover, .top-button .donate-button:focus {
+    color: #FFF;
+    opacity: 1;
+    outline: none;
   }
   
   .donate-btn a {
@@ -500,6 +554,9 @@ body {
   .btn:focus {
     outline: none;
   }
+  
+
+
   
 /*----------------------------*\
 	Site Branding
@@ -1254,7 +1311,7 @@ ul.tabs-nav .tab-nav.active {
     margin-top: 10px;
     font-size: 48px;
     font-weight: 500;
-    color: #262626;
+    color: #000;
 }
 
 .counter-box .counter-k {
@@ -1263,9 +1320,9 @@ ul.tabs-nav .tab-nav.active {
 }
 
 .counter-box .entry-title {
-    margin-top: 16px;
-    font-size: 14px;
-    color: #595858;
+    margin-top: 10px;
+    font-size: 16px;
+    color: #000;
 }
 
 /*
@@ -1273,13 +1330,13 @@ ul.tabs-nav .tab-nav.active {
 ----------------------------------*/
 
  .home-page-icon-boxes {
-    padding: 50px;
+    padding: 30px;
     
 }
 
 
 .icon-box {
-    padding: 40px;
+    padding: 15px;
     border-radius: 24px;
     background: #ecf2f5;
     text-align: center;
@@ -1331,10 +1388,11 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 }
 
 .icon-box .entry-title {
-    margin-top: 28px;
-    font-size: 24px;
+    
+    font-size: 25px;
     font-weight: 600;
     color: #262626;
+    
 }
 
 .icon-box:hover .entry-title,
@@ -1343,13 +1401,19 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 }
 
 .icon-box .entry-content {
-    margin-top: 24px;
+    margin-top: 5px;
 }
 
 .icon-box .entry-content p {
-    margin: 0;
-    font-size: 14px;
+    
+    font-size: 16px;
     color: #595858;
+}
+
+.icon-box .entry-content h4 {
+    
+    font-size: 18px;
+
 }
 
 .icon-box:hover .entry-content p,
@@ -1381,7 +1445,7 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
     padding: 48px 0; 
     background: url("images/2023_09_29_10_36_IMG_6367.JPG") no-repeat center center;
     background-size: cover; 
-    z-index: 10;
+    z-index: -10;
     display: flex; 
     flex-direction: column;
     justify-content: center;
@@ -1419,9 +1483,10 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 
 
 .welcome-content .entry-content {
-    font-size: 20px; /* Use rem for better scaling */
-    line-height: 1.8;
-    color: #b7b7b7;
+    font-size: 1.2rem; /* Use rem for better scaling */
+    line-height: 2;
+    color: #ffffff;
+    text-align: justify;
 }
 
 
@@ -1511,6 +1576,7 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 .event-content-wrap .entry-title a {
     font-size: 18px;
     font-weight: 600;
+    text-decoration: underline;
     color: #262626;
 }
 
@@ -1577,12 +1643,17 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 }
 
 .featured-cause .featured-cause .cause-wrap figure {
-    width: 146px;
+    width: 150px;
     height: auto;
 }
 
 .cause-wrap figure img {
     display: block;
+    width: 10%; /* Make image take full width */
+    /* height: 10%; */
+    /* object-fit: contain; */
+    /* object-position: center; */
+    /* overflow: hidden; */
 }
 
 .featured-cause .cause-content-wrap {
@@ -1651,17 +1722,23 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    padding: 0px;
 }
 
 /* Responsive modal image */
 #flyerModal .modal-content {
-    width: 90%;  /* Makes it responsive */
-    max-width: 400px; /* Limits max size on web */
-    max-height: 80vh; /* Prevents overflow */
+    width: 32%;  /* Makes it responsive */
+    max-width: 40%; /* Limits max size on web */
+    max-height: 80%; /* Prevents overflow */
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-    margin-top: 30px;
+    margin-top: 20% ;
+    position: relative;
+    display: flex;
+    object-fit: contain;
+    object-position: center; 
+
+
 }
 
 /* Close button */
@@ -1747,7 +1824,11 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 
 .our-causes .cause-wrap figure {
     position: relative;
+    overflow: hidden;
+  
 }
+
+
 
 .our-causes .cause-wrap figure .figure-overlay {
     top: 0;
@@ -2369,6 +2450,7 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 .donate-button:hover {
     transform: translateY(-3px);
     box-shadow: 0 5px 15px rgba(0, 104, 55, 0.3);
+    outline: none;
 }
 /*--------------------------------------------------------------
 # Causes
