--- a/Styless.css
+++ b/Styless.css
@@ -255,11 +255,22 @@ body {
     z-index: 1000;
     display: flex;
     justify-content: center;
-    z-index: 10000;
+    z-index: -1;
     width: 90%;
+    align-items: center;
     
     
 }
+
+/* 
+.modal-content img {
+   justify-content: center;
+   height: 80px; 
+   width: 250px
+
+
+} */
+
 
 /* Close button */
 .close-btn {
@@ -310,8 +321,9 @@ body {
 /* Buttons inside modal */
 .other-items-btn {
     justify-self: center;
-    margin-top: 15px;
-    display: inline-block;
+    margin-bottom: 10px;
+    display: block;
+    align-items: center;
 }
 
 /* Responsive styling for modals */
@@ -538,6 +550,7 @@ body {
     background: #14744F;
     /* border: 2px solid #ffff; */
     border-radius: 25px;
+    
   }
   
   .btn {
@@ -584,17 +597,17 @@ body {
     top: 0;
     left: -320px;
     z-index: 100;
-    width: 320px;
-    max-width: calc(100% - 120px);
+    /* width: 320px; */
+    max-width: calc(100% - 150px);
     height: 100%;
     padding: 20px 10px;
-    margin-top: 0px;
-    /* background: #fff; */
+    margin-top: 50px;
+    background: #fff;
     list-style: none;
-    overflow-x: scroll;
+    /* overflow-x: scroll; */
     transition: all 0.35s;
     margin: 0px;
-    padding: 0;
+    
     list-style: none;
   }
   
@@ -776,7 +789,7 @@ body {
   }
   
   .footer-logo .logo img {
-    max-width: 100%;
+    max-width: 90%;
     max-height: 100%;
     object-fit: cover;
   }
@@ -802,13 +815,20 @@ body {
   \*----------------------------*/
   
   .footer-volunteer {
-    margin: 0px;
+    
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    
   }
   
   .footer-volunteer .primary-button {
-    margin-top: 15px;
-    display: block;
+    margin-top: 10px;
+    display: inline-block;
     width: 100%;
+    align-items: center;
+    justify-content: center;
+    object-position: center;
   }
   
   /*----------------------------*\
@@ -860,26 +880,36 @@ body {
   
   .footer-button {
     /* margin-top: 50px; */
-    display: block;
-    width: 100%;
+    /* display: block; */
+    /* width: 100%; */
 
     position: relative;
-    display: inline-block;
-    padding: 0px 30px;
-    background: #14744F;
-    color: #FFF;
+    display: flex;
+    
+    background-color: #14744F;
+    color: #ffffff;
     font-weight: 400;
-    height: 45px;
-    line-height: 45px;
+    height: 40px;
+    padding-bottom: 5px;
+    
     border: none;
     border-radius: 25px;
     overflow: hidden;
     opacity: 0.9;
     -webkit-transition: 0.6s all;
     transition: 0.6s all;
-    margin-right: 10px;
+    align-items: center;
+    /* justify-content: center; */
+    object-position: center;
   }
   
+  .footer-button {
+    align-items: center;
+    /* justify-content: center; */
+    object-position: center;
+    
+
+}
   
   
   .footer .btn.btn-link:hover {
@@ -983,7 +1013,7 @@ BODY
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.385); /* Black background with 50% opacity */
-    z-index: 1; /* Ensure the overlay sits above the image, but below the caption */
+    /*z-index: 1;  Ensure the overlay sits above the image, but below the caption */
 }
 
 /* Adjusting carousel-caption to sit above the overlay */
@@ -1224,6 +1254,7 @@ ul.tabs-nav .tab-nav.active {
     -webkit-transition: 0.6s all;
     transition: 0.6s all;
     margin-right: 10px;
+    cursor: pointer;
     
   }
   
@@ -1443,9 +1474,10 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 .home-page-welcome {
     position: relative;
     padding: 48px 0; 
+    background-color: rgba(0, 0, 0, 0.385); /* Black background with 50% opacity */
     background: url("images/2023_09_29_10_36_IMG_6367.JPG") no-repeat center center;
     background-size: cover; 
-    z-index: -10;
+    z-index: 0;
     display: flex; 
     flex-direction: column;
     justify-content: center;
@@ -1991,7 +2023,7 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
     padding-bottom: 10px;
     font-size: 36px;
     font-weight: 600;
-    color: #fff;
+    color: #b8aeae;
     margin-top: 20px;
 }
 
@@ -2032,6 +2064,7 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 /* Volunteers Section */
 .volunteers-section {
     padding: 1rem ;
+
 }
 
 .section-title {
@@ -2043,19 +2076,19 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 
 /* Testimonial Card */
 .testimonial-card {
-    background: white;
+    /* background: white; */
     padding: 1rem;
     margin-bottom: 0.5rem;
     border-radius: 15px;
-    /* box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); */
     text-align: center;
-    transition: transform 0.3s ease;
+    height: 100%px;
+    /* transition: transform 0.3s ease; */
 }
 
 .volunteer-image {
     width: 120px;
     height: 120px;
-    margin: 0 auto 1.5rem;
+    margin: 0 auto 1rem;
     border-radius: 50%;
     overflow: hidden;
 }
@@ -2067,7 +2100,7 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 }
 
 .volunteer-name {
-    font-size: 1.25rem;
+    font-size: 1.3rem;
     margin-bottom: 1rem;
     color: #333;
 }
@@ -2081,6 +2114,8 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 /* Swiper Customization */
 .swiper {
     padding: 2rem 1rem;
+    
+    
 }
 
 .swiper-button-next,
@@ -2091,6 +2126,8 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 .swiper-pagination-bullet {
 
     background: #333;
+    
+    
 }
 
 .swiper-pagination-bullet-active {
@@ -2120,21 +2157,24 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 
 /* Animation */
 .testimonial-card:hover {
-    transform: translateY(-5px);
+    /* transform: translateY(-5px); */
 }
 
 /* Smooth transitions */
 .swiper-slide {
     transition: opacity 0.3s ease;
+    
+    
 }
 
 .swiper-slide-active {
     opacity: 1;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .swiper-slide-next,
 .swiper-slide-prev {
-    opacity: 0.7;
+    opacity: 0.3;
 }
 
 .about-page .page-header {
